--- a/wwwroot/sobrenos.html
+++ b/wwwroot/sobrenos.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body class="d-flex flex-column min-vh-100">
+
+    
 <nav class="navbar navbar-expand-lg bg-orange">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
@@ -20,6 +22,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link text-white fw-bold fs-5" href="sobrenos.html">Nossa História</a></li>
+                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white fw-bold fs-5" href="#" role="button" data-bs-toggle="dropdown">
                         Produtos
@@ -45,49 +48,21 @@
         </div>
     </div>
 </nav>
-
-
-    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/banner1.png" class="d-block w-100" alt="Banner 1">
-            </div>
-            <div class="carousel-item">
-                <img src="img/banner2.png" class="d-block w-100" alt="Banner 2">
-            </div>
-            <div class="carousel-item">
-                <img src="img/banner3.png" class="d-block w-100" alt="Banner 3">
+    <main>
+        <div class="container mt-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <h2>Nossa História</h2>
+                    <p>Na Marfim, construímos mais do que paredes — construímos confiança. Somos uma loja de material de construção que nasceu com o propósito de oferecer produtos de qualidade, atendimento diferenciado e soluções completas para obras de todos os tamanhos.</p>
+                    <p>Com anos de experiência no mercado, atendemos desde profissionais da construção civil até clientes que estão realizando o sonho da casa própria. Trabalhamos com as melhores marcas e uma variedade completa de materiais: cimento, tijolos, tintas, ferramentas, hidráulica, elétrica, pisos, revestimentos e muito mais.</p>
+                    <p>Nosso compromisso vai além da venda. Aqui, você encontra uma equipe pronta para orientar e ajudar em cada etapa do seu projeto, sempre com agilidade, respeito e transparência</p>
+                    <p>Seja para construir, reformar ou simplesmente dar uma nova cara a um ambiente, conte com a gente. Porque na [Nome da Loja], o seu projeto é a nossa prioridade.</p>
+                </div>
+                <div class="col-md-6">
+                    <img src="img/marfim.jpg" alt="Logan" height="405">
+                </div>
             </div>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
-    </div>
-
-    <main class="flex-grow-1">
-        <section class="container text-center my-5">
-            <h2 class="text-orange">O que oferecemos</h2>
-            <div class="row mt-4">
-                <div class="col-md-4">
-                    <i class="bi bi-hammer fs-1 text-orange"></i>
-                    <h4>Produtos Diversificados</h4>
-                    <p>Tudo para sua obra, do básico ao acabamento.</p>
-                </div>
-                <div class="col-md-4">
-                    <i class="bi bi-truck fs-1 text-orange"></i>
-                    <h4>Entrega Rápida</h4>
-                    <p>Levamos até você com agilidade e segurança.</p>
-                </div>
-                <div class="col-md-4">
-                    <i class="bi bi-people fs-1 text-orange"></i>
-                    <h4>Atendimento Especializado</h4>
-                    <p>Equipe pronta para te ajudar com o que precisar.</p>
-                </div>
-            </div>
-        </section>
     </main>
 
     <footer class="bg-orange text-white py-4 mt-auto">
