--- a/wwwroot/carrinho.html
+++ b/wwwroot/carrinho.html
@@ -42,65 +42,78 @@
                 <li class="nav-item"><a class="nav-link text-white fw-bold fs-5" href="carreiras.html">Carreiras</a></li>
                 <li class="nav-item"><a class="nav-link text-white fw-bold fs-5" href="contato.html">Contato</a></li>
             </ul>
+            <i class="bi bi-bag-fill ms-auto" id="sacola" style="font-size: 2rem; cursor: pointer;" onclick="location.href='carrinho.html';"></i>
         </div>
     </div>
 </nav>
+ 
+    <div class="container mt-5">
+        <h2>Seu Carrinho</h2>
+        <ul id="itensCarrinho" class="list-group">
 
+        </ul>
 
-    <div id="carouselExample" class="carousel slide" data-bs-ride="carousel">
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/banner1.png" class="d-block w-100" alt="Banner 1">
-            </div>
-            <div class="carousel-item">
-                <img src="img/banner2.png" class="d-block w-100" alt="Banner 2">
-            </div>
-            <div class="carousel-item">
-                <img src="img/banner3.png" class="d-block w-100" alt="Banner 3">
-            </div>
+        <div class="mt-3">
+            <b>Total: </b> <span id="precoTotal">R$ 0,00</span>
         </div>
-        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExample" data-bs-slide="prev">
-            <span class="carousel-control-prev-icon"></span>
-        </button>
-        <button class="carousel-control-next" type="button" data-bs-target="#carouselExample" data-bs-slide="next">
-            <span class="carousel-control-next-icon"></span>
-        </button>
+
+        <button class="btn btn-primary mt-3" onclick="finalizarCompra()">Finalizar Compra</button>
     </div>
 
-    <main class="flex-grow-1">
-        <section class="container text-center my-5">
-            <h2 class="text-orange">O que oferecemos</h2>
-            <div class="row mt-4">
-                <div class="col-md-4">
-                    <i class="bi bi-hammer fs-1 text-orange"></i>
-                    <h4>Produtos Diversificados</h4>
-                    <p>Tudo para sua obra, do básico ao acabamento.</p>
-                </div>
-                <div class="col-md-4">
-                    <i class="bi bi-truck fs-1 text-orange"></i>
-                    <h4>Entrega Rápida</h4>
-                    <p>Levamos até você com agilidade e segurança.</p>
-                </div>
-                <div class="col-md-4">
-                    <i class="bi bi-people fs-1 text-orange"></i>
-                    <h4>Atendimento Especializado</h4>
-                    <p>Equipe pronta para te ajudar com o que precisar.</p>
-                </div>
-            </div>
-        </section>
+    <script>
+
+    function carregarCarrinho() {
+        let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+        let listaCarrinho = document.getElementById('itensCarrinho');
+        listaCarrinho.innerHTML = ''; 
+
+        // Calcular o total
+        let total = 0;
+
+        carrinho.forEach((item, index) => {
+            let listItem = document.createElement('li');
+            listItem.classList.add('list-group-item', 'd-flex', 'justify-content-between');
+            listItem.innerHTML = `${item.nome} - R$${item.preco.toFixed(2)}
+                                  <button class="btn btn-danger btn-sm" onclick="removerDoCarrinho(${index})">Remover</button>`;
+            listaCarrinho.appendChild(listItem);
+
+            total += item.preco; // Somar o preço de cada item
+        });
+
+        // Atualizar o preço total na página
+        document.getElementById('precoTotal').innerText = `R$ ${total.toFixed(2)}`;
+    }
+
+    // Função para remover um item do carrinho
+    function removerDoCarrinho(index) {
+        let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+        carrinho.splice(index, 1); // Remove o item pelo índice
+        localStorage.setItem('carrinho', JSON.stringify(carrinho)); // Atualiza o carrinho no localStorage
+        carregarCarrinho(); // Atualiza a lista exibida
+        atualizarSacola(); // Atualiza o número de itens na sacola
+    }
+
+    // Função para finalizar a compra (exemplo)
+    function finalizarCompra() {
+        alert('Compra finalizada!');
+        localStorage.removeItem('carrinho'); // Limpa o carrinho após a compra
+        carregarCarrinho(); // Atualiza a lista de itens após a limpeza
+        atualizarSacola(); // Atualiza a sacola
+    }
+
+    // Função para atualizar o número de itens na sacola (ícone da sacola)
+    function atualizarSacola() {
+        let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
+        let qtdItens = carrinho.length;
+        document.getElementById('sacola').innerHTML = ' (' + qtdItens + ')';
+    }
+
+    // Carrega os itens do carrinho quando a página é carregada
+    window.onload = carregarCarrinho;
+
+    </script>
+    <main>
+
     </main>
-
-    <footer class="bg-orange text-white py-4 mt-auto">
-        <div class="container text-center">
-            <p><strong>Endereço:</strong> Rua Mariana, 360 - Centro, Ipatinga-MG</p>
-            <p><strong>Telefone:</strong> (31) 5678-1234</p>
-            <div class="d-flex justify-content-center gap-4 mt-3">
-                <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
-                <a href="#" class="text-white fs-4"><i class="bi bi-whatsapp"></i></a>
-            </div>
-        </div>
-    </footer>
-
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
