--- a/wwwroot/carrinho.html
+++ b/wwwroot/carrinho.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body class="d-flex flex-column min-vh-100">
-<nav class="navbar navbar-expand-lg bg-orange">
+<nav class="navbar navbar-expand-lg bg-blue">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="img/Logo Minimalista Materiais de Construção Azul e Laranja.png" alt="Logan" height="130" class="rounded-circle me-2">
@@ -28,7 +28,7 @@
                         <li><a class="dropdown-item" href="construcao.html">Para sua construção</a></li>
                         <li><a class="dropdown-item" href="hidraulicos.html">Materiais hidráulicos</a></li>
                         <li><a class="dropdown-item" href="eletricos.html">Materiais elétricos</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#tintas">Tintas</a></li>
+                        <li><a class="dropdown-item" href="tintas.html">Tintas</a></li>
                         <li><a class="dropdown-item" href="produtos.html#vernizes">Vernizes</a></li>
                         <li><a class="dropdown-item" href="produtos.html#esmaltes">Esmaltes</a></li>
                         <li><a class="dropdown-item" href="produtos.html#ferramentas">Ferramentas</a></li>
@@ -42,10 +42,11 @@
                 <li class="nav-item"><a class="nav-link text-white fw-bold fs-5" href="carreiras.html">Carreiras</a></li>
                 <li class="nav-item"><a class="nav-link text-white fw-bold fs-5" href="contato.html">Contato</a></li>
             </ul>
-            <i class="bi bi-bag-fill ms-auto" id="sacola" style="font-size: 2rem; cursor: pointer;" onclick="location.href='carrinho.html';"></i>
+            <i class="bi bi-bag-fill ms-auto" id="sacola" style="font-size: 2rem; color: white; cursor: pointer;" onclick="location.href='carrinho.html';"></i>
         </div>
     </div>
 </nav>
+
  
     <div class="container mt-5">
         <h2>Seu Carrinho</h2>
@@ -59,7 +60,7 @@
 
         <button class="btn btn-primary mt-3" onclick="finalizarCompra()">Finalizar Compra</button>
     </div>
-
+    <main>
     <script>
 
     function carregarCarrinho() {
@@ -67,7 +68,7 @@
         let listaCarrinho = document.getElementById('itensCarrinho');
         listaCarrinho.innerHTML = ''; 
 
-        // Calcular o total
+     
         let total = 0;
 
         carrinho.forEach((item, index) => {
@@ -77,43 +78,53 @@
                                   <button class="btn btn-danger btn-sm" onclick="removerDoCarrinho(${index})">Remover</button>`;
             listaCarrinho.appendChild(listItem);
 
-            total += item.preco; // Somar o preço de cada item
+            total += item.preco; 
         });
 
-        // Atualizar o preço total na página
+      
         document.getElementById('precoTotal').innerText = `R$ ${total.toFixed(2)}`;
     }
 
-    // Função para remover um item do carrinho
+   
     function removerDoCarrinho(index) {
         let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
-        carrinho.splice(index, 1); // Remove o item pelo índice
-        localStorage.setItem('carrinho', JSON.stringify(carrinho)); // Atualiza o carrinho no localStorage
-        carregarCarrinho(); // Atualiza a lista exibida
-        atualizarSacola(); // Atualiza o número de itens na sacola
+        carrinho.splice(index, 1); 
+        localStorage.setItem('carrinho', JSON.stringify(carrinho)); 
+        carregarCarrinho(); 
+        atualizarSacola();
     }
 
-    // Função para finalizar a compra (exemplo)
+
     function finalizarCompra() {
         alert('Compra finalizada!');
-        localStorage.removeItem('carrinho'); // Limpa o carrinho após a compra
-        carregarCarrinho(); // Atualiza a lista de itens após a limpeza
-        atualizarSacola(); // Atualiza a sacola
+        localStorage.removeItem('carrinho'); 
+        carregarCarrinho(); 
+        atualizarSacola(); 
     }
 
-    // Função para atualizar o número de itens na sacola (ícone da sacola)
+   
     function atualizarSacola() {
         let carrinho = JSON.parse(localStorage.getItem('carrinho')) || [];
         let qtdItens = carrinho.length;
         document.getElementById('sacola').innerHTML = ' (' + qtdItens + ')';
     }
 
-    // Carrega os itens do carrinho quando a página é carregada
+
     window.onload = carregarCarrinho;
 
     </script>
-    <main>
-
     </main>
+    <footer class="bg-orange text-white py-4 mt-auto">
+        <div class="container text-center">
+            <p><strong>Endereço:</strong> Rua Mariana, 360 - Centro, Ipatinga-MG</p>
+            <p><strong>Telefone:</strong> (31) 5678-1234</p>
+            <div class="d-flex justify-content-center gap-4 mt-3">
+                <a href="#" class="text-white fs-4"><i class="bi bi-instagram"></i></a>
+                <a href="#" class="text-white fs-4"><i class="bi bi-whatsapp"></i></a>
+            </div>
+        </div>
+    </footer>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
