--- a/wwwroot/sobrenos.html
+++ b/wwwroot/sobrenos.html
@@ -9,9 +9,7 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body class="d-flex flex-column min-vh-100">
-
-    
-<nav class="navbar navbar-expand-lg bg-orange">
+<nav class="navbar navbar-expand-lg bg-blue">
     <div class="container">
         <a class="navbar-brand d-flex align-items-center" href="index.html">
             <img src="img/Logo Minimalista Materiais de Construção Azul e Laranja.png" alt="Logan" height="130" class="rounded-circle me-2">
@@ -22,7 +20,6 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
             <ul class="navbar-nav">
                 <li class="nav-item"><a class="nav-link text-white fw-bold fs-5" href="sobrenos.html">Nossa História</a></li>
-                
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle text-white fw-bold fs-5" href="#" role="button" data-bs-toggle="dropdown">
                         Produtos
@@ -31,7 +28,7 @@
                         <li><a class="dropdown-item" href="construcao.html">Para sua construção</a></li>
                         <li><a class="dropdown-item" href="hidraulicos.html">Materiais hidráulicos</a></li>
                         <li><a class="dropdown-item" href="eletricos.html">Materiais elétricos</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#tintas">Tintas</a></li>
+                        <li><a class="dropdown-item" href="tintas.html">Tintas</a></li>
                         <li><a class="dropdown-item" href="produtos.html#vernizes">Vernizes</a></li>
                         <li><a class="dropdown-item" href="produtos.html#esmaltes">Esmaltes</a></li>
                         <li><a class="dropdown-item" href="produtos.html#ferramentas">Ferramentas</a></li>
@@ -45,6 +42,7 @@
                 <li class="nav-item"><a class="nav-link text-white fw-bold fs-5" href="carreiras.html">Carreiras</a></li>
                 <li class="nav-item"><a class="nav-link text-white fw-bold fs-5" href="contato.html">Contato</a></li>
             </ul>
+            <i class="bi bi-bag-fill ms-auto" id="sacola" style="font-size: 2rem; color: white; cursor: pointer;" onclick="location.href='carrinho.html';"></i>
         </div>
     </div>
 </nav>
