--- a/wwwroot/construcao.html
+++ b/wwwroot/construcao.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Logan Materiais de Construção</title>
+    <title>Construção</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
@@ -29,8 +29,8 @@
                         <li><a class="dropdown-item" href="hidraulicos.html">Materiais hidráulicos</a></li>
                         <li><a class="dropdown-item" href="eletricos.html">Materiais elétricos</a></li>
                         <li><a class="dropdown-item" href="tintas.html">Tintas</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#vernizes">Vernizes</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#esmaltes">Esmaltes</a></li>
+                        <li><a class="dropdown-item" href="vernizes.html">Vernizes</a></li>
+                        <li><a class="dropdown-item" href="esmaltes.html">Esmaltes</a></li>
                         <li><a class="dropdown-item" href="produtos.html#ferramentas">Ferramentas</a></li>
                         <li><a class="dropdown-item" href="produtos.html#pisos">Pisos e Revestimentos</a></li>
                         <li><a class="dropdown-item" href="produtos.html#metais">Metais</a></li>
@@ -49,7 +49,7 @@
 <main>
     <div class="container">
         <div class="row">
-            <!-- Produto 1 -->
+          
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
                     <img src="img/construção/areia.webp" class="card-img-top" alt="Areia Média 20Kg Pedrasil">
@@ -66,7 +66,7 @@
                 </div>
             </div>
 
-            <!-- Produto 2 -->
+            
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
                     <img src="img/construção/cimento.webp" class="card-img-top" alt="Cimento CPII E-32 50Kg Campeão">
@@ -85,7 +85,6 @@
                 </div>
             </div>
 
-            <!-- Produto 3 -->
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
                     <img src="img/construção/cimento2.webp" class="card-img-top" alt="Cimento CPIII 32RS 50Kg CSN">
@@ -103,8 +102,6 @@
                     </div>
                 </div>
             </div>
-
-            <!-- Produto 4 -->
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
                     <img src="img/construção/vergalhao.webp" class="card-img-top" alt="Vergalhão Aço Nervurado CA-50 10mm 3/8 Barra 12m Simec">
@@ -123,7 +120,6 @@
                 </div>
             </div>
 
-            <!-- Produto 5 -->
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
                     <img src="img/construção/tijolo.webp" class="card-img-top" alt="Bloco Cerâmico de Vedação 11,5x14x24cm Nova União">
@@ -142,7 +138,6 @@
                 </div>
             </div>
 
-            <!-- Produto 6 -->
             <div class="col-xl-4 col-sm-6 g-5">
                 <div class="card" style="background-color: transparent; border: none;">
                     <img src="img/construção/telha.webp" class="card-img-top" alt="Telha Ondulada Cimentícia Cinza 5mm 2,44x1,1m Brasilit">
@@ -164,7 +159,7 @@
     </div>
 </main>
 
-<footer class="bg-orange text-white py-4 mt-auto">
+<footer class="bg-blue text-white py-4 mt-auto">
     <div class="container text-center">
         <p><strong>Endereço:</strong> Rua Mariana, 360 - Centro, Ipatinga-MG</p>
         <p><strong>Telefone:</strong> (31) 5678-1234</p>
