--- a/wwwroot/hidraulicos.html
+++ b/wwwroot/hidraulicos.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>Logan Materiais de Construção</title>
+    <title>Hidráulicos</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css" />
     <link rel="stylesheet" href="style.css" />
@@ -29,8 +29,8 @@
                         <li><a class="dropdown-item" href="hidraulicos.html">Materiais hidráulicos</a></li>
                         <li><a class="dropdown-item" href="eletricos.html">Materiais elétricos</a></li>
                         <li><a class="dropdown-item" href="tintas.html">Tintas</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#vernizes">Vernizes</a></li>
-                        <li><a class="dropdown-item" href="produtos.html#esmaltes">Esmaltes</a></li>
+                        <li><a class="dropdown-item" href="vernizes.html">Vernizes</a></li>
+                        <li><a class="dropdown-item" href="esmaltes.html">Esmaltes</a></li>
                         <li><a class="dropdown-item" href="produtos.html#ferramentas">Ferramentas</a></li>
                         <li><a class="dropdown-item" href="produtos.html#pisos">Pisos e Revestimentos</a></li>
                         <li><a class="dropdown-item" href="produtos.html#metais">Metais</a></li>
@@ -149,7 +149,7 @@
     </div>
 </main>
 
-<footer class="bg-orange text-white py-4 mt-auto">
+<footer class="bg-blue text-white py-4 mt-auto">
     <div class="container text-center">
         <p><strong>Endereço:</strong> Rua Mariana, 360 - Centro, Ipatinga-MG</p>
         <p><strong>Telefone:</strong> (31) 5678-1234</p>
